# nook

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: FOUNDATION.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: gamification.ts  nookVoice.ts  sound.ts
src/motion/: springs.ts
src/state/: store.ts
src/styles/: base.css  tokens.css
src/windows/: BreakOverlay.tsx  Companion.tsx  Dashboard.tsx  RhythmSheet.tsx
